# SmartDoctorOrganizerAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  __main__.py  agent_actions.py  agent_core.py  check_data.py  client_management_tab.py  client_profile.py  clients_database.db  home_page.py  hook-Tabs.py  main.py  main.spec  modern_theme.py  native_tools.py  pyproject.toml  requirements.txt
SmartDoctorOrganizerAgent/: __init__.py  __main__.py
Tabs/: __init__.py  account_tab.py  appointment_tab.py  chatbot_tab.py  client_management_tab.py  clients_stats_tab.py  dashboard_tab.py  extraction_tab.py  notification_tab.py  settings_tab.py  voice_tab.py
UI/: __init__.py  components.py  design_system.py  icons.py  modern_theme.py  safety.py
agents/: agent_actions.py  agent_simulator_view.py
core/: ai_assitant.py  app_settings.py
data/: appointments.py  clients_data.db  clients_database.db  data.db  data.py  database.py
features/: __init__.py  agent_viewer.py  clientWidget.py  home_page.py  translation_helper.py
model_intent/: __init__.py  chatbot_tab.py  hf_client.py  intent_router.py
nlp/: __init__.py  gemma_text.py  local_gemma_it.py  smart_nlp.py  snapshot.py
now/: account_tab.py  appointment_tab.py  chatbot_tab.py  clientWidget.py  client_management_tab.py  clients_stats_tab.py  customized_template_tab.py  dashboard_tab.py  extraction_tab.py  home_page.py  home_tab.py  main.py  monthly_receipts_archive.json  new_client_tab.py  notification_tab.py  translations.json  voice_input_widget.py
packaging/: hook-reportlab.py  (+2 more)
(+20 files in other folders)
