[project]
name = "clinic-assistant"
version = "0.1.0"
requires-python = ">=3.10"
description = "Desktop clinic assistant (PyQt5)"
readme = "README.md"
license = {text = "MIT"}
authors = [{ name="Your Clinic", email="ops@example.com" }]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP"]
ignore = ["E203","E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
